--- a/SCPersonalProject/Views/Default/SendMessage.cshtml
+++ b/SCPersonalProject/Views/Default/SendMessage.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="title-box-2">
     <h5 class="title-left">
-        Send Message Us
+ Mesaj Gönder
     </h5>
 </div>
 <div>
@@ -8,18 +8,18 @@
         <div class="row">
             <div class="col-md-12 mb-3">
                 <div class="form-group">
-                    <input type="text" name="Name" class="form-control" id="name" placeholder="Your Name" required>
+                    <input type="text" name="Name" class="form-control" id="name" placeholder="Ad Soyad" required>
                 </div>
             </div>
             <div class="col-md-12 mb-3">
                 <div class="form-group">
-                    <input type="email" class="form-control" name="Mail" id="email" placeholder="Your Email" required>
+                    <input type="email" class="form-control" name="Mail" id="email" placeholder="Email Adresiniz" required>
                 </div>
             </div>
 
             <div class="col-md-12">
                 <div class="form-group">
-                    <textarea class="form-control" name="Content" rows="5" placeholder="Message" required></textarea>
+                    <textarea class="form-control" name="Content" rows="5" placeholder="Mesaj" required></textarea>
                 </div>
             </div>
             <div class="col-md-12 text-center my-3">
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="col-md-12 text-center">
-                <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                <button type="submit" class="button button-a button-big button-rouded">Gönder </button>
             </div>
         </div>
     </form>
