--- a/SCPersonalProject/Views/Shared/BlogLayout.cshtml
+++ b/SCPersonalProject/Views/Shared/BlogLayout.cshtml
@@ -8,11 +8,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Untree.co">
+    <meta name="author" content="Sinan Çıvak">
     <link rel="shortcut icon" href="favicon.png">
 
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap5" />
+    <meta name="description" content="Blog yazıları, teknoloji haberleri ve en güncel yazılım ile diğer ilgi çekici konular hakkında en son paylaşımları burada bulun. İleri teknolojilerden sinema dünyasına, kişisel gelişimden gençlik kültürüne kadar geniş bir yelpazede içerikler sunuyoruz. Keşfedin ve güncel kalın.">
+    <meta name="keywords" content="Yazılım, Teknoloji, Genel Kültür, Kişisel Gelişim, Film">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +33,7 @@
     <link rel="stylesheet" href="css/flatpickr.min.css">
 
 
-    <title>Blogy &mdash; Free Bootstrap 5 Website Template by Untree.co</title>
+    <title>Blog &mdash; Blog,Makale ve En Güncel Teklonoji Haberleri  Sinan</title>
 </head>
 <body>
 
