--- a/SCPersonalProject/Views/Shared/Components/AboutList/Default.cshtml
+++ b/SCPersonalProject/Views/Shared/Components/AboutList/Default.cshtml
@@ -25,8 +25,8 @@
                                         <div class="about-info">
                                             <p><span class="title-s">Name: </span> <span>@item.Name</span></p>
                                             <p><span class="title-s">Profile: </span> <span>@item.Profile</span></p>
-                                            <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                                            <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                                            <p><span class="title-s">Üniversite: </span> <span>@item.Phone</span></p>
+
                                         </div>
                                     </div>
                                 </div>
