--- a/SCPersonalProject/Views/Shared/Components/ServiceList/Default.cshtml
+++ b/SCPersonalProject/Views/Shared/Components/ServiceList/Default.cshtml
@@ -10,7 +10,7 @@
                         Hizmetler
                     </h3>
                     <p class="subtitle-a">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Aşağıdaki hizmetler konusunda bilgi veya destek almak istediğiniz takdirde, yardımcı olmaktan mutluluk duyarım.İletişim kısmından bana ulaşabilirsiniz.
                     </p>
                     <div class="line-mf"></div>
                 </div>
