--- a/SCPersonalProject/Areas/Admin/Views/Register/Index.cshtml
+++ b/SCPersonalProject/Areas/Admin/Views/Register/Index.cshtml
@@ -69,10 +69,10 @@
                                         <input type="text" class="form-control" asp-for="UserName" placeholder="Enter username">
                                     </div>
 
-                                    <div class="mb-3">
+                                    @*<div class="mb-3">
                                         <label class="form-label" for="userpassword">Şifre</label>
                                         <input type="password" class="form-control" asp-for="Password" placeholder="Enter password">
-                                    </div>
+                                    </div>*@
 
                                     <div class="form-check">
                                         <input type="checkbox" class="form-check-input" id="auth-terms-condition-check">
