--- a/SCPersonalProject/Views/Default/HeroSectionPartial.cshtml
+++ b/SCPersonalProject/Views/Default/HeroSectionPartial.cshtml
@@ -8,7 +8,7 @@
             <div class="container">
                 <!--<p class="display-6 color-d">Hello, world!</p>-->
                 <h1 class="hero-title mb-4">I am Sinan ÇIVAK</h1>
-                <p class="hero-subtitle"><span class="typed" data-typed-items="Software Developer,.Net Developer, Freelancer,System Administrator "></span></p>
+                <p class="hero-subtitle"><span class="typed" data-typed-items="Software Developer "></span></p>
                 <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
             </div>
         </div>
