--- a/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
+++ b/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
@@ -18,10 +18,10 @@
                             <li>
                                 <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 1 })">Yazılım</a>
                             </li>
-                            <li>  <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 2 })">E-Fatura</a></li>
+                            <li>  <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 2 })">Kişisel Gelişim</a></li>
 
                             <li>  <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 3 })">Genel Kültür</a></li>
-                            <li><a href="/Imdb100Movie/Index">IMDB En İyi 100 Film</a></li>
+                            <li><a href="/Movie/Index">Popüler Filmler</a></li>
                             <li><a href="/DateLine/Index/">Tarihi Olaylar</a></li>
                             <li><a href="/NewsApi/Index/">Teklonoji Haberleri</a></li>
                         </ul>
