--- a/SCPersonalProject/Views/Shared/Components/ContactList/Default.cshtml
+++ b/SCPersonalProject/Views/Shared/Components/ContactList/Default.cshtml
@@ -17,16 +17,15 @@
             </p>
             <ul class="list-ico">
                 <li><span class="bi bi-geo-alt"></span> @item.Name</li>
-                <li><span class="bi bi-phone"></span> @item.Phone</li>
+                @*<li><span class="bi bi-phone"></span> @item.Phone</li>*@
                 <li><span class="bi bi-envelope"></span> @item.Email</li>
             </ul>
         </div>
         <div class="socials">
             <ul>
-                <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/sinancvk/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+
+                <li><a target="_blank" href="https://github.com/Sinancvk0"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
             </ul>
         </div>
     </div>
