--- a/SCPersonalProject/Views/BlogRetro/CategoryDetails.cshtml
+++ b/SCPersonalProject/Views/BlogRetro/CategoryDetails.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-12">
                
-                    <div class="heading">Kategoriye Ait Bloglar Aşağıdadır. </div>
+                    <div class="heading">Kategoriye Ait Yazılar. </div>
 
        
 
@@ -62,7 +62,7 @@
 
                 <div class="sidebar-box search-form-wrap mb-4">
                     <form action="#" class="sidebar-search-form">
-                        <span class="bi-search"></span>
+                
                         <input type="text" class="form-control" id="s" placeholder="Arama">
                     </form>
                 </div>
