--- a/SCPersonalProject/Views/BlogRetro/Index.cshtml
+++ b/SCPersonalProject/Views/BlogRetro/Index.cshtml
@@ -5,6 +5,16 @@
     Layout = "~/Views/Shared/BlogLayout.cshtml";
 }
 
+<style>
+    .card-title {
+        height: 3em; 
+        overflow: hidden;
+        white-space: nowrap; 
+        text-overflow: ellipsis; 
+    }
+</style>
+
+
 
 @await Component.InvokeAsync("SliderList")
 <section id="blog" class="blog-mf sect-pt4 route">
@@ -15,7 +25,7 @@
                     <h3 class="title-a">
                         Tüm İçeriklere Buradan Ulaşabilirsiniz
                     </h3>
-                    
+
                     <div class="line-mf"></div>
                 </div>
             </div>
@@ -31,7 +41,7 @@
                     <div class="col-md-4">
                         <div class="card card-blog">
                             <div class="card-img">
-                                <a href="/BlogRetro/Details/@blog.Id"><img src="@blog.ImageUrl" style="width: 900px; height: 300px;" alt="" class="img-fluid"></a>
+                                <a href="/BlogRetro/Details/@blog.Id"><img src="@blog.ImageUrl" style="width: 900px; height: 300px;" alt="Image" class="img-fluid"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-category-box">
