--- a/SCPersonalProject/Views/Shared/Components/BlogDetails/Default.cshtml
+++ b/SCPersonalProject/Views/Shared/Components/BlogDetails/Default.cshtml
@@ -1,10 +1,19 @@
 ﻿@using SC.Models
 @model List<BlogCategory>
 <!-- Start posts-entry -->
+<style>
+    .card-title {
+        height: 3em;
+        overflow: hidden;
+        white-space: nowrap; 
+        text-overflow: ellipsis; 
+    }
+</style>
+
 <section class="section posts-entry posts-entry-sm bg-light">
     <div class="container">
         <div class="row mb-4">
-            <div class="col-12 text-uppercase text-black">More Blog Posts</div>
+            <div class="col-12 text-uppercase text-black">Diğer Yazılar</div>
         </div>
         <div class="row">
             @foreach (var item in Model)
@@ -14,7 +23,7 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="blog-entry">
                             <a href="@blog.Id" class="img-link">
-                                <img src="@blog.ImageUrl" alt="Image" class="img-fluid">
+                                <img src="@blog.ImageUrl" alt="Image" style="width: 900px; height: 300px;" class="img-fluid">
                             </a>
                             <span class="date">@blog.DateCreated.ToString("MM/yyyy")</span>
                             <h2><a href="@blog.Id">@blog.Name</a></h2>
