--- a/SCPersonalProject/Views/Default/SendMessage.cshtml
+++ b/SCPersonalProject/Views/Default/SendMessage.cshtml
@@ -26,7 +26,7 @@
                 <div id="status-messages">
                     <div class="loading" style="display: none;">Loading</div>
                     <div class="error-message" style="display: none;"></div>
-                    <div class="sent-message" style="display: none;">Your message has been sent. Thank you!</div>
+                    <div class="sent-message" style="display: none;">Mesajının iletilti en kısa süre içerisinde dönüş sağlanıcaktır.</div>
                 </div>
             </div>
             <div class="col-md-12 text-center">
