--- a/SCPersonalProject/Views/Default/HeaderPartial.cshtml
+++ b/SCPersonalProject/Views/Default/HeaderPartial.cshtml
@@ -2,7 +2,7 @@
     <div class="container d-flex align-items-center justify-content-between">
         <a href="#hero">
             <h1 class="logo">
-                <img src="~/person/assets/img/SinanGame2.png" alt="SiNaNGiF" style="max-width: 150px; max-height: 150px; ">
+                <img src="~/person/assets/img/asf.png" alt="SiNaNGiF" style="max-width: 150px; max-height: 150px; ">
             </h1>
 
         </a>
