--- a/SCPersonalProject/Views/Default/SendMessage.cshtml
+++ b/SCPersonalProject/Views/Default/SendMessage.cshtml
@@ -1,12 +1,8 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title>İletişim Formu</title>
-</head>
+﻿
 <body>
     <div class="title-box-2">
         <h5 class="title-left">
-            Send Message Us
+Mesaj Gönder
         </h5>
     </div>
     <div>
@@ -14,28 +10,28 @@
             <div class="row">
                 <div class="col-md-12 mb-3">
                     <div class="form-group">
-                        <input type="text" name="Name" class="form-control" id="name" placeholder="Your Name" required>
+                        <input type="text" name="Name" class="form-control" id="name" placeholder="Ad Soyad" required>
                     </div>
                 </div>
                 <div class="col-md-12 mb-3">
                     <div class="form-group">
-                        <input type="email" class="form-control" name="Mail" id="email" placeholder="Your Email" required>
+                        <input type="email" class="form-control" name="Mail" id="email" placeholder="Mail Adresi" required>
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="form-group">
-                        <textarea class="form-control" name="Content" rows="5" placeholder="Message" required></textarea>
+                        <textarea class="form-control" name="Content" rows="5" placeholder="Mesaj" required></textarea>
                     </div>
                 </div>
                 <div class="col-md-12 text-center my-3">
                     <div id="status-messages">
                         <div class="loading" style="display: none;">Loading</div>
-            1
-                        <div class="sent-message" style="display: none;">Your message has been sent. Thank you!</div>
+               
+                        <div class="sent-message" style="display: none;">Mesaj gönderdiğiniz için teşekkür ederim En kısa süre içerisinde dönüş sağlanıcaktır.</div>
                     </div>
                 </div>
                 <div class="col-md-12 text-center">
-                    <button type="button" id="submitButton" class="button button-a button-big button-rouded">Send Message</button>
+                    <button type="button" id="submitButton" class="button button-a button-big button-rouded">Gönder</button>
                 </div>
             </div>
         </form>
