--- a/SCPersonalProject/Views/NewsApi/Index.cshtml
+++ b/SCPersonalProject/Views/NewsApi/Index.cshtml
@@ -4,7 +4,27 @@
     Layout = "~/Views/Shared/BlogLayout.cshtml";
 }
 
+<style>
+    .card-title {
+        font-size: 18px;
+        font-weight: bold;
+        margin: 0; 
+        padding: 0;
+    }
 
+
+    .card-text {
+        font-size: 14px;
+    }
+
+ 
+    .card-img-top {
+        width: 100%;
+        height: 200px; 
+        object-fit: cover; 
+    }
+
+</style>
 
 
 <div class="container mt-5">
